--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1,4 +1,13 @@
+@import 'base/variables'
+
 *
     font-family: 'MuseoSansCyrl', sans-serif
 
-@import 'base/_variables.sass'
+.container
+    max-width: 950px
+    margin: 0 auto
+
+@import 'blocks/promo'
+@import 'blocks/header'
+@import 'blocks/_button'
+@import 'blocks/_advantages'
