--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,3 +1,90 @@
 * {
   font-family: "MuseoSansCyrl", sans-serif;
+}
+
+.container {
+  max-width: 950px;
+  margin: 0 auto;
+}
+
+.promo {
+  min-height: 650px;
+  padding: 21px 0 93px 0;
+  background-image: url("../../img/background_first.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.promo__wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  text-align: right;
+}
+.promo__header {
+  text-transform: uppercase;
+  color: #ffffff;
+  font-weight: 700;
+  font-size: 42px;
+  line-height: 42px;
+}
+.promo____subheader {
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 24px;
+  text-transform: uppercase;
+}
+
+.header {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.header__logo {
+  width: 250px;
+}
+.header__logo img {
+  width: 100%;
+}
+.header__official {
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 12px;
+  color: #ffffff;
+  text-align: center;
+}
+.header__official span {
+  display: block;
+  font-size: 18px;
+  margin-top: 7px;
+}
+.header__phone {
+  display: block;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 18px;
+  color: #ffffff;
+  text-decoration: none;
+}
+.header__phone:hover {
+  color: #c70101;
+}
+.header__contact {
+  display: flex;
+  align-items: flex-end;
+  flex-direction: column;
+}
+
+.button {
+  margin-top: 4px;
+  width: 153px;
+  height: 32px;
+  background-color: #c70101;
+  border: none;
+  border-radius: 5px;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 19px;
+  color: #ffffff;
+  text-align: center;
+  text-transform: uppercase;
 }/*# sourceMappingURL=style.css.map */
