--- a/src/css/style.css
+++ b/src/css/style.css
@@ -26,17 +26,49 @@
   font-weight: 700;
   font-size: 42px;
   line-height: 42px;
+  margin-top: 90px;
 }
-.promo____subheader {
+.promo__subheader {
   font-weight: 500;
+  color: #ffffff;
   font-size: 24px;
   line-height: 24px;
+  margin-top: 10px;
   text-transform: uppercase;
+}
+.promo__icons {
+  width: 425px;
+  display: flex;
+  justify-content: space-between;
+  margin-top: 64px;
+}
+.promo__icon {
+  display: block;
+  width: 108px;
+  text-align: center;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 14px;
+  color: #ffffff;
+}
+.promo__icon img {
+  display: block;
+  margin: 0 auto;
+  margin-bottom: 15px;
+}
+.promo__link {
+  font-weight: 500;
+  font-size: 16px;
+  margin-top: 7px;
+  color: #ffffff;
+}
+.promo__link a {
+  color: #ffffff;
 }
 
 .header {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
 }
 .header__logo {
@@ -87,4 +119,23 @@
   color: #ffffff;
   text-align: center;
   text-transform: uppercase;
+}
+.button_main {
+  width: 303px;
+  height: 54px;
+  font-size: 16px;
+  line-height: 25px;
+  margin-top: 67px;
+}
+
+.advantages {
+  height: 473px;
+}
+.advantages__header {
+  font-weight: 700;
+  font-size: 30px;
+  line-height: 30px;
+  color: #0D0D0D;
+  text-align: center;
+  margin-top: 71px;
 }/*# sourceMappingURL=style.css.map */
