--- a/src/sass/blocks/_advantages.sass
+++ b/src/sass/blocks/_advantages.sass
@@ -1,9 +1,30 @@
 .advantages
-    height: 473px
+    background-color: #F6F6F6
+    padding: 71px 0 65px 0
     &__header
         font-weight: 700
         font-size: 30px
         line-height: 30px
         color: $main_text
         text-align: center
-        margin-top: 71px
+    &__items
+        display: flex
+        align-items: center
+        flex-direction: row
+        margin-top: 60px
+        text-align: center
+    &__item
+        width: 260px
+    &__subheader
+        font-weight: 700
+        font-size: 18px
+        line-height: 29px
+        margin-top: 35px
+    &__text
+        font-weight: 300
+        font-size: 14px
+        line-height: 18px
+        margin-top: 20px
+        a
+            color: $main-color
+            font-weight: bold
