--- a/src/sass/blocks/_promo.sass
+++ b/src/sass/blocks/_promo.sass
@@ -1,5 +1,5 @@
 .promo
-    min-height: 650px
+    height: 650px
     padding: 21px 0 93px 0
     background-image: url("../../img/background_first.jpg")
     background-repeat: no-repeat
@@ -47,5 +47,8 @@
         color: $subtext_color
         a
             color: $subtext_color
+            &:hover
+                color: $main-color
+
 
 
