--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -9,5 +9,6 @@
 
 @import 'blocks/promo'
 @import 'blocks/header'
-@import 'blocks/_button'
-@import 'blocks/_advantages'
+@import 'blocks/button'
+@import 'blocks/advantages'
+@import 'base/media'
