--- a/src/sass/base/_media.sass
+++ b/src/sass/base/_media.sass
@@ -28,11 +28,8 @@
         &__link
             font-size: 14px
     .advantages
-        padding-bottom: 45px
         &__items
-            flex-direction: column
-        &__item
-            margin-bottom: 20px
+            column-gap: 0px
 @media ( max-width: 767px)
     .header
         &__phone
@@ -64,11 +61,8 @@
             font-size: 14px
             margin-top: 47px
     .advantages
-        padding-top: 51px
         &__header
             font-size: 26px
-        &__items
-            margin-top: 40px
 @media ( max-width: 370px)
     .header
         &__logo
