--- a/src/sass/blocks/_advantages.sass
+++ b/src/sass/blocks/_advantages.sass
@@ -1,6 +1,6 @@
 .advantages
     background-color: #F6F6F6
-    padding: 71px 0 65px 0
+    padding: 61px 0 65px 0
     &__header
         font-weight: 700
         font-size: 30px
@@ -9,13 +9,13 @@
         text-align: center
     &__items
         display: grid
-        grid-template-columns: repeat(auto-fill, minmax(277px, 1fr))
-        // column-gap: 59px
+        grid-template-columns: repeat(auto-fit, minmax(210px, 210px))
+        column-gap: 65px
         row-gap: 25px
-        justify-items: center
+        justify-content: center
         margin-top: 60px
     &__item
-        width: 260px
+        width: 210px
         text-align: center
     &__subheader
         font-weight: 700
