added new container "consultation"

--- a/src/sass/base/_media.sass
+++ b/src/sass/base/_media.sass
@@ -30,6 +30,14 @@
     .advantages
         &__items
             column-gap: 0px
+    .consultation
+        .title_left
+            text-align: center
+        &__descr
+            text-align: center
+        .feed_form
+            margin: 0 auto
+            margin-top: 36px
 @media ( max-width: 767px)
     .header
         &__phone
@@ -67,9 +75,12 @@
             margin-top: 47px
         .button
             width: 220px
-    .advantages
-        &__header
-            font-size: 26px
+    .title
+        font-size: 26px
+    .consultation
+        padding-top: 60px
+        .title_left
+            line-height: 30px
 @media ( max-width: 370px)
     .header
         &__logo
@@ -88,6 +99,5 @@
             font-size: 14px
         .button_main
             margin-top: 35px
-    .advantages
-        &__header
-            font-size: 22px
+    .title
+        font-size: 22px
