--- a/src/sass/blocks/_button.sass
+++ b/src/sass/blocks/_button.sass
@@ -17,3 +17,12 @@
         font-size: 16px
         line-height: 25px
         margin-top: 67px
+    &_submit
+        width: 100%
+        width: 303px
+        height: 58px
+        background: #C70101
+        font-size: 16px
+        line-height: 25px
+        color: #ffff
+        text-transform: uppercase
