--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -11,4 +11,7 @@
 @import 'blocks/header'
 @import 'blocks/button'
 @import 'blocks/advantages'
+@import 'blocks/_consultation'
+@import 'blocks/_title'
+@import 'blocks/_forms'
 @import 'base/media'
