--- a/src/sass/base/_media.sass
+++ b/src/sass/base/_media.sass
@@ -27,9 +27,9 @@
             width: 260px
         &__link
             font-size: 14px
-    .advantages
-        &__items
-            column-gap: 0px
+    // .advantages
+    //     &__items
+    //         column-gap: 0px
     .consultation
         .title_left
             text-align: center
@@ -44,11 +44,11 @@
             display: none
         button
             display: none
-@media ( max-width: 629px)
-    .advantages
-        &__items
-            grid-template-columns: none
-            grid-auto-flow: row
+// @media ( max-width: 629px)
+//     .advantages
+//         &__items
+//             grid-template-columns: none
+//             grid-auto-flow: row
 @media ( max-width: 575px)
     .header
         justify-content: center
