--- a/src/sass/blocks/_advantages.sass
+++ b/src/sass/blocks/_advantages.sass
@@ -2,15 +2,27 @@
     background-color: #F6F6F6
     padding: 61px 0 65px 0
     &__items
-        display: grid
-        grid-template-columns: repeat(auto-fit, minmax(210px, 210px))
-        column-gap: 65px
-        row-gap: 25px
-        justify-content: center
-        margin-top: 60px
+        display: flex
+        flex-flow: row wrap
+        justify-content: space-around
+        // grid-template-columns: repeat(auto-fit, minmax(210px, 210px))
+        // column-gap: 65px
+        // row-gap: 25px
+        // margin: 0 auto
+        margin-top: 30px
+    // &__items
+    //     display: grid
+    //     grid-template-columns: repeat(auto-fit, minmax(210px, 210px))
+    //     column-gap: 65px
+    //     row-gap: 25px
+    //     justify-content: center
+    //     margin: 0 auto
+    //     margin-top: 60px
     &__item
-        width: 210px
+        width: 250px
         text-align: center
+        margin: 0 auto
+        margin-top: 30px
     &__subheader
         font-weight: 700
         font-size: 18px
