--- a/src/sass/blocks/_title.sass
+++ b/src/sass/blocks/_title.sass
@@ -2,7 +2,7 @@
     font-weight: 700
     font-size: 30px
     line-height: 30px
-    color: $subtext_color
+    color: black
     text-align: center
     text-transform: uppercase
     &_left
