--- a/src/css/style.css
+++ b/src/css/style.css
@@ -10,7 +10,7 @@
 .promo {
   height: 650px;
   padding: 21px 0 93px 0;
-  background-image: url("../img/background_first.jpg");
+  background-image: url("../../img/background_first.jpg");
   background-repeat: no-repeat;
   background-position: center;
 }
@@ -177,7 +177,7 @@
 .consultation {
   min-height: 680px;
   padding: 100px 0 92px 0;
-  background-image: url("../img/bg2.jpg");
+  background-image: url("../../img/bg2.jpg");
   background-repeat: no-repeat;
   background-position: center;
 }
