--- a/src/sass/blocks/_consultation.sass
+++ b/src/sass/blocks/_consultation.sass
@@ -1,7 +1,7 @@
 .consultation
     min-height: 680px
     padding: 100px 0 92px 0
-    background-image: url('../img/bg2.jpg')
+    background-image: url('../img/bg2.jpg'), url('src/img/bg2.jpg')
     background-repeat: no-repeat
     background-position: center
     &__descr
