--- a/src/sass/blocks/_promo.sass
+++ b/src/sass/blocks/_promo.sass
@@ -1,7 +1,7 @@
 .promo
     height: 650px
     padding: 21px 0 93px 0
-    background-image: url("../img/background_first.jpg")
+    background-image: url('../img/background_first.jpg')
     background-repeat: no-repeat
     background-position: center
     &__wrapper
