--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -11,7 +11,8 @@
 @import 'blocks/header'
 @import 'blocks/button'
 @import 'blocks/advantages'
-@import 'blocks/_consultation'
-@import 'blocks/_title'
-@import 'blocks/_forms'
+@import 'blocks/consultation'
+@import 'blocks/title'
+@import 'blocks/forms'
+@import 'blocks/carousel'
 @import 'base/media'
