--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -4,6 +4,8 @@
     font-family: 'MuseoSansCyrl', sans-serif
 
 .container
+    // Используется для tiny-corousel
+    position: relative
     max-width: 950px
     margin: 0 auto
 
