--- a/src/sass/blocks/_carousel.sass
+++ b/src/sass/blocks/_carousel.sass
@@ -3,19 +3,40 @@
     &__inner
         position: relative
         width: 750px
-        height: 527px 
+        height: 580px
         margin: 0 auto
         background-color: #fff
-    .slick-prev, .slick-next
+    // [data-controls="prev"]
+    //     position: absolute
+    //     top: 50%
+    //     transform: translateY(-50%)
+    //     left: -66px
+    //     border: none
+    //     background-color: #ffff
+    .prev, .next
         position: absolute
         top: 50%
         transform: translateY(-50%)
         left: -66px
         border: none
         background-color: #ffff
-        img
-            width: 31px
-            height: 50px
-    .slick-next
+    // .slick-prev, .slick-next
+    //     position: absolute
+    //     top: 50%
+    //     transform: translateY(-50%)
+    //     left: -66px
+    //     border: none
+    //     background-color: #ffff
+        // img
+        //     width: 31px
+        //     height: 50px
+    .next
         right: -66px
         left: auto
+    // .slick-next
+    //     right: -66px 
+    //     left: auto
+    .tns-item
+        img
+            display: block
+            margin: 0 auto
