--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -8,6 +8,10 @@
     position: relative
     max-width: 950px
     margin: 0 auto
+    
+    
+
+  
 
 @import 'blocks/promo'
 @import 'blocks/header'
@@ -18,3 +22,4 @@
 @import 'blocks/forms'
 @import 'blocks/carousel'
 @import 'base/media'
+@import 'base/_mixins'
