--- a/src/sass/base/_media.sass
+++ b/src/sass/base/_media.sass
@@ -8,12 +8,14 @@
 @media ( max-width: 1150px)
     .carousel
         &__inner
-            height: 70%
-            width: 70%
+            height: 80%
+            width: 80%
+        .tns-ovh
+            margin-bottom: 10px
         .tns-item
             img
-                height: 70%
-                width: 70% 
+                height: 80%
+                width: 80% 
         .tns-nav
             display: block
             width: 105px
