--- a/src/sass/base/_media.sass
+++ b/src/sass/base/_media.sass
@@ -11,20 +11,21 @@
             height: 80%
             width: 80%
         .tns-ovh
-            margin-bottom: 10px
+            margin-bottom: 20px
         .tns-item
             img
                 height: 50%
                 width: 50% 
         .tns-nav
             display: block
-            width: 105px
+            max-width: 165px 
             margin: 0 auto
             button
                 height: 20px
-                width: 20px
+                width: 40px
                 border-color: red
-                border-radius: 50%
+                transform: skew(-20deg)
+                border-radius: 25%
                 margin-right: 15px
                 background-color: red
             .tns-nav-active
