--- a/src/sass/base/_media.sass
+++ b/src/sass/base/_media.sass
@@ -11,11 +11,11 @@
             height: 80%
             width: 80%
         .tns-ovh
-            margin-bottom: 20px
+            margin-bottom: 25px
         .tns-item
             img
-                height: 50%
-                width: 50% 
+                height: 80%
+                width: 80% 
         .tns-nav
             display: block
             max-width: 165px 
@@ -23,11 +23,11 @@
             button
                 height: 20px
                 width: 40px
-                border-color: red
+                border-color: $main_color
                 transform: skew(-20deg)
                 border-radius: 25%
                 margin-right: 15px
-                background-color: red
+                background-color: $main_color
             .tns-nav-active
                 background-color: #fff
         .prev, .next
