--- a/src/sass/blocks/_button.sass
+++ b/src/sass/blocks/_button.sass
@@ -11,6 +11,10 @@
     color: $subtext_color
     text-align: center
     text-transform: uppercase
+    &:hover
+        // #1,2 смещение; #3 размытие; #4 цвет
+        box-shadow: 3px 3px 20px #fff
+        border: none
     &_main
         width: 303px
         height: 54px
@@ -26,3 +30,7 @@
         line-height: 25px
         color: #ffff
         text-transform: uppercase
+    &_mini
+        width: 135px
+        height: 44px
+        font-size: 14px
