--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -17,5 +17,6 @@
 @import 'blocks/title'
 @import 'blocks/forms'
 @import 'blocks/carousel'
+@import 'blocks/_catalog'
 @import 'base/media'
 @import 'base/_mixins'
