--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -18,5 +18,6 @@
 @import 'blocks/forms'
 @import 'blocks/carousel'
 @import 'blocks/_catalog'
+@import 'blocks/_feedbacks'
 @import 'base/media'
 @import 'base/_mixins'
