--- a/src/sass/base/_media.sass
+++ b/src/sass/base/_media.sass
@@ -36,8 +36,6 @@
                 background-color:$main_color
         .prev, .next
             display: none
-    .feedbacks
-        padding: 83px 20px 48px 20px
 @media ( max-width: 991px)
     .header
         justify-content: space-around
@@ -74,16 +72,32 @@
             margin-top: 36px
     // .feedbacks
     //     &__item
-    //         grid-template-columns: 1fr
+    //         // grid-template-columns: repeat(auto-fit, minmax(169px, 1fr))
     //         justify-items: center
-    //         text-align: center
     //         row-gap: 30px
-    .catalog
-        &__tab
-            font-size: 16px
-            width: 180px
-            height: 36px
-            line-height: 36px
+    //     &__client_photo
+    //         margin-left: 10px
+    // .client
+    //     margin-right: 20px
+    // .catalog
+    //     &__tab
+    //         font-size: 16px
+    //         width: 180px
+    //         height: 36px
+    //         line-height: 36px
+@media ( max-width: 867px)
+    .feedbacks
+        &__client_photo
+            width: 139px
+            height: 139px
+    .client
+        &__name
+            margin-top: 10px
+            text-align: center
+        &__subdescr
+            text-align: center
+        &__feedback
+            margin: 20px 50px 0 50px
 @media ( max-width: 767px)
     .header
         &__phone
