--- a/src/sass/blocks/_feedbacks.sass
+++ b/src/sass/blocks/_feedbacks.sass
@@ -1,19 +1,27 @@
+.title
+    font-weight: 700
+    font-size: 30px
+    line-height: 30px
+    text-align: center
+    text-transform: uppercase
 .feedbacks
     padding: 83px 0 48px 0
-    &__title
-        font-weight: 700
-        font-size: 30px
-        line-height: 30px
-        text-align: center
-        text-transform: uppercase
     &__items
         margin-top: 60px
     &__item
-        display: grid
+        display: flex
+        flex-flow: row wrap
+        justify-content: space-around
         margin-bottom: 60px
-        grid-template-columns: minmax(169px, 169px) minmax(auto, 689px)1fr
-        column-gap: 61px
+        // display: grid
+        // margin-bottom: 60px
+        // grid-template-columns: repeat(auto-fit, minmax(180px, 1fr))
+        // // grid-template-columns: minmax(169px, 169px) minmax(auto, 689px)1fr
+        // column-gap: 61px
+        // row-gap: 10px
     &__client_photo
+        margin: 0 10px 0 10px
+        display: block
         width: 169px
         height: 169px
 .client
@@ -31,5 +39,7 @@
         font-size: 16px
         line-height: 24px
         margin-top: 10px
+        max-width: 680px
+
 
 
