--- a/src/sass/blocks/_catalog.sass
+++ b/src/sass/blocks/_catalog.sass
@@ -15,6 +15,7 @@
         font-weight: 400
         font-size: 18px
         line-height: 48px
+        justify-content: center
         text-transform: uppercase
         text-align: center
         color: $tab_text_color
