--- a/src/sass/blocks/_button.sass
+++ b/src/sass/blocks/_button.sass
@@ -34,3 +34,6 @@
         width: 135px
         height: 44px
         font-size: 14px
+        &:hover
+            box-shadow: 3px 3px 20px $main-color
+            border: none
