--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -17,7 +17,9 @@
 @import 'blocks/title'
 @import 'blocks/forms'
 @import 'blocks/carousel'
-@import 'blocks/_catalog'
-@import 'blocks/_feedbacks'
+@import 'blocks/catalog'
+@import 'blocks/feedbacks'
+@import 'blocks/footer'
+@import 'blocks/modal'
 @import 'base/media'
 @import 'base/_mixins'
