--- a/src/sass/blocks/_catalog.sass
+++ b/src/sass/blocks/_catalog.sass
@@ -53,6 +53,7 @@
         border: 2px solid #E8E8E8
         padding: 20px 20px 26px 20px
         overflow: hidden
+        grid-row: span 3
         &__img
             display: block
             margin: 0 auto
