added optimization for footer, modal. added validation for modal

--- a/src/sass/base/_media.sass
+++ b/src/sass/base/_media.sass
@@ -94,6 +94,24 @@
             width: 140px
             height: 36px
             line-height: 36px
+    .footer
+        &__info
+            width: 250px
+            padding: 20px 0px
+            height: 180px
+        &__addr
+            font-size: 16px
+            margin-bottom: 16px
+        &__phone
+            font-size: 16px
+            margin-bottom: 16px
+        &__social
+            a
+                height: 30px
+                width: 30px
+            img
+                height: 17px
+            
 @media ( max-width: 575px)
     .header
         justify-content: center
@@ -126,6 +144,13 @@
         padding-top: 60px
         .title_left
             line-height: 30px
+    .modal
+        width: 340px
+        padding: 38px 20px 40px 20px
+        &__close
+            right: 10px
+            top: 10px
+            font-size: 31px
 @media ( max-width: 370px)
     .header
         &__logo
@@ -152,3 +177,11 @@
             width: 140px
             height: 30px
             line-height: 28px
+    .modal
+        width: 280px
+            padding: 38px 20px 40px 20px
+        input
+            width: 240px
+        button
+            width: 240px
+            font-size: 14px
