--- a/src/sass/blocks/_consultation.sass
+++ b/src/sass/blocks/_consultation.sass
@@ -4,6 +4,14 @@
     background-image: url('../img/bg2.jpg')
     background-repeat: no-repeat
     background-position: center
+    .error
+        border: solid 3px red
+    label.error
+        display: flex
+        color: red
+        border: none
+        text-align: center
+        margin-bottom: 15px
     &__descr
         font-size: 20px
         line-height: 30px
