--- a/src/sass/blocks/_forms.sass
+++ b/src/sass/blocks/_forms.sass
@@ -1,8 +1,18 @@
 .feed_form
+    position: relative
     margin-top: 36px
     display: flex
     flex-direction: column
     width: 300px
+    .error
+        border: solid 1px red
+    label.error
+        color: red
+        border: none
+        text-align: center
+        margin-bottom: 15px
+    .success
+        border: solid 1px green
     input
         height: 50px
         border-radius: 5px
