--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1,4 +1,5 @@
 @import 'base/variables'
+@import 'base/animation'
 
 *
     font-family: 'MuseoSansCyrl', sans-serif
@@ -21,5 +22,6 @@
 @import 'blocks/feedbacks'
 @import 'blocks/footer'
 @import 'blocks/modal'
+@import 'blocks/page_up'
 @import 'base/media'
 @import 'base/_mixins'
