--- a/src/sass/blocks/_advantages.sass
+++ b/src/sass/blocks/_advantages.sass
@@ -18,8 +18,8 @@
             transform: rotate(30deg)
             top: 55px
             animation-name: stars
-            animation-duration: 1.5s
-            animation-timing-function: ease-in
+            animation-duration: 2s
+            animation-timing-function: linear
             animation-iteration-count: infinite
             animation-direction: alternate
             .star1
@@ -48,8 +48,4 @@
             animation-timing-function: ease
             animation-iteration-count: infinite
             animation-direction: alternate
-        &_sneaker
-            animation: sneaker .7s linear alternate
-            animation-timing-function: ease-out
-
     
